# apt-cache-reader

./: Cargo.toml
src/: main.rs
